# physics-simulation

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/core/: particle.cpp  particle.h  particle_system.cpp  particle_system.h
src/graphics/: renderer.cpp  renderer.h
src/rendering/: renderer.py
